hphp/hack/test/typecheck/undefined_method.php.exp
File "undefined_method.php", line 21, characters 9-12:
Could not find method blah in an object of type I1 (Typing[4053])
File "undefined_method.php", line 15, characters 32-33:
This is why I think it is an object of type I1
File "undefined_method.php", line 12, characters 11-12:
Declaration of I1 is here
